@@ -9,6 +9,8 @@ Changelog
 - Only show workspace notification tab when feature is activated. [njohner]
 - Do not manipulate the persisten journal list on @history get. [phgross]
 - Fix authorization handling when fetching the template_group_id. [phgross]
+- Do not add document modified journal entry when saving file with OC RESTAPI. [njohner]
+- Do not manipulate the persistent journal list on @journal get. [phgross]
 
 
 2019.4.1 (2019-11-26)
